# zik

./: .env.example  .gitignore  DESIGN.md  MANUAL_TESTING.md  PROMPT.md  README.md  TASKS.md
backend/: MIGRATIONS.md  README.md  pyproject.toml
backend/app/: __init__.py  app_factory.py  config.py  db_init.py  errors.py  extensions.py  seed.py  serializers.py
backend/app/auth/: __init__.py  middleware.py
backend/app/models/: __init__.py  base.py  favorite.py  play_history.py  preference.py  song.py  user.py
backend/app/routes/: __init__.py  favorites.py  health.py  history.py  preferences.py  recommendations.py  songs.py
backend/app/seeds/: __init__.py  build_catalog.py  download_audio.py  generate_audio.py  songs.json
backend/app/services/: __init__.py  gemini.py
backend/tests/: conftest.py  test_app_factory.py  test_auth_middleware.py  test_catalog.py  test_config.py  test_db_init.py  test_favorites_routes.py  test_gemini_service.py  test_history_routes.py  test_models.py  test_preferences_routes.py  test_recommendations_routes.py  test_seed.py  test_songs_routes.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthContext.ts  AuthModal.tsx  AuthProvider.tsx  ProtectedRoute.tsx  auth.test.tsx  index.ts  useAuth.ts
frontend/src/hooks/: usePlayer.test.tsx  usePlayer.ts  usePreferences.test.tsx  usePreferences.ts
frontend/src/pages/: FavoritesPage.test.tsx  FavoritesPage.tsx  LandingPage.test.tsx  LandingPage.tsx  NotFoundPage.test.tsx  (+1 more)
(+32 files in other folders)
